--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,16 +1,96 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@font-face {
+  font-display: swap;
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Verdana Regular'), local('Verdana-Regular'),
+    url('/fonts/Verdana.woff2') format('woff2'),
+    url('/fonts/Verdana.woff') format('woff');
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+  font-display: swap;
+  font-family: 'Verdana';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Verdana Italic'), local('Verdana-Italic'),
+    url('/fonts/Verdana-Italic.woff2') format('woff2'),
+    url('/fonts/Verdana-Italic.woff') format('woff');
 }
 
-* {
+@font-face {
+  font-display: swap;
+  font-family: 'Verdana';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Verdana Bold'), local('Verdana-Bold'),
+    url('/fonts/Verdana-Bold.woff2') format('woff2'),
+    url('/fonts/Verdana-Bold.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Verdana';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Verdana Bold Italic'), local('Verdana-Bold-Italic'),
+    url('/fonts/Verdana-Bold-Italic.woff2') format('woff2'),
+    url('/fonts/Verdana-Bold-Italic.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Gill Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Gill Sans'), local('GillSans'),
+    url('/fonts/GillSans.woff') format('woff');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Gill Sans';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Gill Sans Semi Bold'), local('GillSans-SemiBold'),
+    url('/fonts/GillSans-SemiBold.woff') format('woff');
+}
+
+html {
   box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Verdana', 'Geneva', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
+  color: #000000;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
