--- a/client/components/Header/header.module.scss
+++ b/client/components/Header/header.module.scss
@@ -28,6 +28,7 @@
   display: block;
   width: 114px;
   height: 23px;
+  transition: $delay;
 
   &:hover {
     fill: $color;
@@ -55,6 +56,7 @@
   align-items: center;
   width: 30px;
   margin-right: 10px;
+  transition: $delay;
 
   &:hover {
     path {
@@ -111,6 +113,7 @@
   text-decoration: none;
   color: inherit;
   padding: 5px 0;
+  transition: $delay;
 }
 
 .menu_link:active {
@@ -124,10 +127,72 @@
 .arrow {
   width: 20px;
   height: 20px;
+  transition: $delay;
+}
+
+@media (min-width: $tablet-width) {
+  .wrap {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 @media (min-width: $desktop-width) {
+  .wrap {
+    padding: 20px 88px 20px 60px;
+  }
+
+  .logo {
+    width: 219px;
+    height: 43px;
+    padding-top: 25px;
+  }
+
+  .nav {
+    position: static;
+    border-bottom: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+  }
+
+  .menu_list {
+    flex-direction: row;
+    padding: 0 44px 0 73px;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .menu_item {
+    margin-right: 2.7%;
+    position: relative;
+    padding: 33px 0;
+  }
+
+  .menu_item:last-child {
+    margin-right: 0;
+  }
+
+  .menu_item path {
+    transition: $delay;
+  }
+
   .menu_item:hover path {
     fill: $color;
+  }
+
+  .submenu_list {
+    position: absolute;
+    top: 80px;
+    left: -35px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+    background-color: #fff;
+    padding: 30px 35px;
+    width: max-content;
+    align-items: flex-start;
+
+    .menu_link {
+      padding: 8px 0;
+    }
   }
 }
