--- a/client/components/Footer/footer.module.scss
+++ b/client/components/Footer/footer.module.scss
@@ -1,2 +1,7 @@
 @import '../../styles/variables.scss';
 @import '../../styles/mixins.scss';
+
+.feedback_list,
+.help_list {
+  @include list-reset;
+}
