--- a/client/components/Home/home.module.scss
+++ b/client/components/Home/home.module.scss
@@ -1,2 +1,7 @@
 @import '../../styles/variables.scss';
 @import '../../styles/mixins.scss';
+
+.articles_list,
+.news_list {
+  @include list-reset;
+}
