--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -5,7 +5,8 @@ $tablet-width-only: 1279px;
 $tablet-width-only: 1400px;
 $max-width: 1400px;
 
-$color: #9CD382;
-$color-hover: #BDF1A5;
+$color: #9cd382;
+$color-active: #bdf1a5;
+$color-gray: #707070;
 
 $delay: 0.2s;
