--- a/client/styles/mixins.scss
+++ b/client/styles/mixins.scss
@@ -9,3 +9,28 @@
   flex-direction: column;
   align-items: center;
 }
+
+@mixin button() {
+  outline: none;
+  border: none;
+  display: block;
+  background-color: $color;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-family: 'Myriad Pro', sans-serif;
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  padding: 11px 30px 6px;
+  text-align: center;
+
+  &:hover {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  &:active {
+    color: $color-active;
+    box-shadow: none;
+  }
+}
