--- a/client/components/SideBar/sidebar.module.scss
+++ b/client/components/SideBar/sidebar.module.scss
@@ -1,2 +1,13 @@
 @import '../../styles/variables.scss';
 @import '../../styles/mixins.scss';
+
+.main {
+  padding: 10px;
+
+  h2 {
+  font-family: 'Gill Sans', 'Verdana', 'Geneva', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+}}
