--- a/client/components/Tags/tags.module.scss
+++ b/client/components/Tags/tags.module.scss
@@ -1,6 +1,32 @@
 @import '../../styles/variables.scss';
 @import '../../styles/mixins.scss';
 
+.main {
+ padding-bottom: 35px;
+}
+
 .list {
   @include list-reset;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+}
+
+.item {
+  margin-right: 13px;
+  margin-bottom: 12px;
+}
+
+.button {
+  @include button;
+  width: 156px;
+  margin: 5px auto 0;
+}
+
+.link {
+  text-decoration: none;
+  color: #000;
+  display: block;
+  border: 1px solid #000;
+  padding: 8px 20px;
 }
