--- a/client/components/Youtube/youtube.module.scss
+++ b/client/components/Youtube/youtube.module.scss
@@ -4,3 +4,19 @@
 .list {
   @include list-reset;
 }
+
+.video_wrap {
+  position: relative;
+  padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+  height: 0;
+  overflow: hidden;
+}
+.video_wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-width: 0;
+  outline-width: 0;
+}
