--- a/client/components/SideBar/sidebar.module.scss
+++ b/client/components/SideBar/sidebar.module.scss
@@ -5,9 +5,14 @@
   padding: 10px;
 
   h2 {
-  font-family: 'Gill Sans', 'Verdana', 'Geneva', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 24px;
-}}
+    font-family: 'Gill Sans', 'Verdana', 'Geneva', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+
+.social {
+  padding-top: 40px;
+}
