--- a/client/components/Archives/archives.module.scss
+++ b/client/components/Archives/archives.module.scss
@@ -1,2 +1,15 @@
 @import '../../styles/variables.scss';
 @import '../../styles/mixins.scss';
+
+.main {
+  padding-bottom: 40px;
+}
+
+.wrap {
+  padding: 0 20px;
+
+  select {
+    width: 100%;
+    padding: 5px;
+  }
+}
