--- a/client/components/Home/home.module.scss
+++ b/client/components/Home/home.module.scss
@@ -66,8 +66,32 @@
   &:active {
     color: $color-active;
 
-     path {
+    path {
       stroke: $color-active;
     }
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .main {
+    display: flex;
+  }
+
+  .articles,
+  .news {
+    width: 50%;
+  }
+
+  .articles {
+    padding: 0 20px;
+  }
+
+  .news {
+    padding: 0 20px 0 8px;
+  }
+
+  .news__list {
+    border: 1px solid #000;
+    padding: 23px;
   }
 }
