--- a/client/components/Article/article.module.scss
+++ b/client/components/Article/article.module.scss
@@ -34,3 +34,32 @@
   width: 140px;
   margin: 20px auto 0;
 }
+
+.text {
+  line-height: 17px;
+}
+
+@media (min-width: $desktop-width) {
+  .main {
+    padding-bottom: 50px;
+  }
+  
+  .info {
+    font-size: 16px;
+    line-height: 18px;
+    padding-top: 15px;
+  }
+
+  .title {
+    margin: 3px 0 18px;
+  }
+
+  .title_link {
+    font-size: 24px;
+    line-height: 28px;
+  }
+
+  .link {
+    margin-top: 30px;
+  }
+}
