--- a/client/components/Footer/footer.module.scss
+++ b/client/components/Footer/footer.module.scss
@@ -51,7 +51,58 @@
 .copyright {
   background-color: #b7b7b7;
   padding: 25px 0;
-  text-align: center; 
+  text-align: center;
   color: #fff;
   font-size: 18px;
+}
+
+@media (min-width: $tablet-width) {
+  .wrap {
+    padding: 26px 20px 40px 20px;
+  }
+
+  .description {
+    padding-bottom: 35px;
+  }
+
+  .row {
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+  }
+
+  .feedback {
+    width: 25%;
+    margin-right: 3%;
+  }
+
+  .feedback_item {
+    display: inline-block;
+    margin-right: 5px;
+  }
+
+  .help {
+    width: 46%;
+    margin-right: 1%;
+    padding-bottom: 35px;
+  }
+
+  .social {
+    width: 25%;
+
+    ul {
+      padding: 0;
+
+      li {
+        margin-bottom: 15px;
+      }
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .wrap {
+    max-width: 1040px;
+    margin: 0 auto;
+  }
 }
