--- a/client/components/Tags/tags.module.scss
+++ b/client/components/Tags/tags.module.scss
@@ -2,14 +2,14 @@
 @import '../../styles/mixins.scss';
 
 .main {
- padding-bottom: 35px;
+  padding-bottom: 35px;
 }
 
 .list {
   @include list-reset;
   display: flex;
   flex-wrap: wrap;
-  padding: 10px;
+  padding: 10px 0;
 }
 
 .item {
@@ -29,4 +29,12 @@
   display: block;
   border: 1px solid #000;
   padding: 8px 20px;
+}
+
+@media (min-width: $desktop-width) {
+  .main {
+    h2 {
+      margin-top: 9px;
+    }
+  }
 }
