--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -4,6 +4,7 @@ $mobile-width-only: 659px;
 $tablet-width-only: 1279px;
 $tablet-width-only: 1400px;
 $max-width: 1400px;
+$content-max-width: 1340px;
 
 $color: #9cd382;
 $color-active: #bdf1a5;
