--- a/client/styles/mixins.scss
+++ b/client/styles/mixins.scss
@@ -24,6 +24,7 @@
   line-height: 16px;
   padding: 11px 30px 6px;
   text-align: center;
+  transition: $delay;
 
   &:hover {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
