добавляет домашнюю страницу для мобильного, меняет цвет ховера, добавляет кнопку вверх

--- a/client/components/Archives/archives.module.scss
+++ b/client/components/Archives/archives.module.scss
@@ -45,7 +45,7 @@
   }
 
   &:hover path {
-    fill: #9cd382;
+    fill: #707070;
   }
 
   &:active path {
@@ -76,7 +76,7 @@
   transition: $delay;
 
   &:hover {
-    color: #9cd382;
+    color: #707070;
   }
 }
 
