--- a/client/components/Search/search.module.scss
+++ b/client/components/Search/search.module.scss
@@ -24,7 +24,7 @@
   padding: 10px 0;
 
   input {
-    outline-color: #9cd382;
+    outline-color: #707070;
     padding: 6px 8px;
     width: calc(100% - 55px);
   }
