--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -105,14 +105,14 @@ img {
 }
 
 .pagination .active a {
-  background-color: #9cd382;
+  background-color: #707070;
   color: #fff;
 }
 
 .pagination .active a:hover {
-  background-color: #9cd382;
+  background-color: #707070;
   color: #fff;
-  border-color: #9cd382;
+  border-color: #707070;
 }
 
 .pagination .active a:active {
