--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -6,8 +6,8 @@ $tablet-width-only: 1400px;
 $max-width: 1400px;
 $content-max-width: 1340px;
 
-$color: #9cd382;
-$color-active: #bdf1a5;
+$color: #707070;
+$color-active: #b7b9b7;
 $color-gray: #707070;
 
 $delay: 0.2s;
