добавляет кнопку вверх, меняет шрифты и выдачу авторов по фамилии

--- a/client/components/Authors/authors.module.scss
+++ b/client/components/Authors/authors.module.scss
@@ -27,7 +27,7 @@
   outline: none;
   border: 1px solid #000000;
   background-color: inherit;
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-size: 24px;
   line-height: 28px;
   text-align: center;
@@ -51,7 +51,7 @@
   outline: none;
   border: 1px solid #000000;
   background-color: inherit;
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-size: 24px;
   line-height: 28px;
   text-align: center;
@@ -84,7 +84,7 @@
 }
 
 .title {
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
@@ -92,7 +92,7 @@
 }
 
 .description {
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 12px;
@@ -109,7 +109,7 @@
 }
 
 .authors_link {
-  font-family: 'Gill Sans', 'Verdana', 'Geneva', sans-serif;
+  font-family: 'Myriad Pro', 'Verdana', 'Geneva', sans-serif;
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
