--- a/client/components/Footer/footer.module.scss
+++ b/client/components/Footer/footer.module.scss
@@ -3,7 +3,7 @@
 
 .main {
   border-top: 5px solid #363636;
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
@@ -48,7 +48,7 @@
 .social {
   display: flex;
   justify-content: center;
-  
+
   ul {
     padding-left: 40px;
     padding-right: 40px;
