--- a/client/components/OnePublication/one-publication.module.scss
+++ b/client/components/OnePublication/one-publication.module.scss
@@ -18,7 +18,7 @@
 }
 
 .info {
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
@@ -30,7 +30,7 @@
 .title {
   margin-top: 10px;
   margin-bottom: 15px;
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 25px;
