--- a/client/components/Popular/popular.module.scss
+++ b/client/components/Popular/popular.module.scss
@@ -9,9 +9,10 @@
 .item {
   margin-bottom: 20px;
 }
+
 .link,
 .views {
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-size: 18px;
   line-height: 21px;
 }
