--- a/client/components/Search/search.module.scss
+++ b/client/components/Search/search.module.scss
@@ -47,7 +47,7 @@
 .articles__titile {
   margin-top: 10px;
   margin-bottom: 10px;
-  font-family: 'Gill Sans', 'Verdana', 'Geneva', sans-serif;
+  font-family: 'Myriad Pro', 'Verdana', 'Geneva', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
