--- a/client/components/SideBar/sidebar.module.scss
+++ b/client/components/SideBar/sidebar.module.scss
@@ -5,7 +5,7 @@
   padding: 10px;
 
   h2 {
-    font-family: 'Gill Sans', 'Verdana', 'Geneva', sans-serif;
+    font-family: 'Myriad Pro', 'Verdana', 'Geneva', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
