--- a/client/components/Sort/sort.module.scss
+++ b/client/components/Sort/sort.module.scss
@@ -4,7 +4,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  font-family: 'Gill Sans', sans-serif;
+  font-family: 'Myriad Pro', sans-serif;
   font-size: 18px;
   line-height: 21px;
   padding: 10px 0;
