--- a/client/components/Youtube/youtube.module.scss
+++ b/client/components/Youtube/youtube.module.scss
@@ -6,7 +6,7 @@
 }
 
 .name {
-  font-family: 'Gill Sans', 'Verdana', 'Geneva', sans-serif;
+  font-family: 'Myriad Pro', 'Verdana', 'Geneva', sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -21,6 +21,7 @@
   height: 0;
   overflow: hidden;
 }
+
 .video_wrap iframe {
   position: absolute;
   top: 0;
