--- a/client/components/Article/article.module.scss
+++ b/client/components/Article/article.module.scss
@@ -6,7 +6,7 @@
 }
 
 .info {
-  font-family: 'Gill Sans';
+  font-family: 'Myriad Pro', sans-serif;;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
@@ -21,7 +21,7 @@
 }
 
 .title_link {
-  font-family: Gill Sans;
+  font-family: Myriad Pro;
   font-weight: 400;
   font-size: 22px;
   line-height: 25px;
@@ -43,7 +43,7 @@
   .main {
     padding-bottom: 50px;
   }
-  
+
   .info {
     font-size: 16px;
     line-height: 18px;
