--- a/client/components/ArticleInner/article-inner.module.scss
+++ b/client/components/ArticleInner/article-inner.module.scss
@@ -6,7 +6,7 @@
 }
 
 .info {
-  font-family: 'Gill Sans';
+  font-family: 'Myriad Pro', sans-serif;;
   font-weight: normal;
   font-size: 14px;
   line-height: 16px;
@@ -21,7 +21,7 @@
 }
 
 .title_link {
-  font-family: Gill Sans;
+  font-family: 'Myriad Pro', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 25px;
@@ -52,7 +52,7 @@
   .main {
     display: flex;
     position: relative;
-    padding: 0;  
+    padding: 0;
   }
 
   .image_link {
@@ -61,7 +61,7 @@
   }
 
   .wrap {
-    width: 52%;  
+    width: 52%;
   }
 
   .info {
