--- a/client/components/GoTop/go-top.module.scss
+++ b/client/components/GoTop/go-top.module.scss
@@ -1,33 +1,20 @@
 @import '../../styles/variables.scss';
 @import '../../styles/mixins.scss';
 
-.back_to_top {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.wrap {
-  max-width: $content-max-width;
-  padding: 10px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-
 .top {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
   cursor: pointer;
   background-color: $color;
-  z-index: 4;
+  z-index: 1;
   width: 50px;
   height: 50px;
   transition: $delay;
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: .5;
+  opacity: .7;
   outline: none;
   border: none;
 
@@ -38,21 +25,19 @@
 }
 
 .top:hover {
-  opacity: .8;
-}
-
-.top:active {
   opacity: 1;
 }
 
-@media (min-width: $tablet-width) {
-  .wrap {
-    padding: 20px;
-  }
+.top:active {
+  opacity: .5;
+}
 
+@media (min-width: $tablet-width) {
   .top {
     width: 70px;
     height: 70px;
+    right: 20px;
+    bottom: 20px;
 
     svg {
       width: 30.63px;
@@ -62,7 +47,8 @@
 }
 
 @media (min-width: $desktop-width) {
-  .wrap {
-    padding: 0 60px 30px 0;
+  .top {
+    right: 3%;
+    bottom: 30px;
   }
 }
