--- a/client/components/AdminPublicationList/admin-publication-list.module.scss
+++ b/client/components/AdminPublicationList/admin-publication-list.module.scss
@@ -2,7 +2,11 @@
 @import '../../styles/mixins.scss';
 
 .main {
-  padding: 0 10px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  max-width: $max-width;
+  margin: 0 auto;
 }
 
 .articles__list {
@@ -10,7 +14,7 @@
 }
 
 .articles__item:not(:last-child) {
-  margin-bottom: 50px;
+
 }
 
 .search__wrap {
@@ -26,7 +30,7 @@
   input {
     outline-color: #707070;
     padding: 6px 8px;
-    width: calc(100% - 55px);
+    width: calc(100% - 90px);
   }
 
   div {
@@ -42,6 +46,18 @@
     width: 32px;
     height: 32px;
   }
+
+  .search__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+      position: relative;
+      width: 16px;
+      height: 15px;
+    }
+  }
 }
 
 .articles__titile {
@@ -54,10 +70,29 @@
   line-height: 24px;
 }
 
+.spinner_wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //background-color: $color;
+  opacity: .5;
+  z-index: 2;
+
+  svg {
+    width: 50px;
+    height: 50px;
+  }
+}
+
 @media (min-width: $tablet-width) {
 
   .main {
-    padding: 0 20px;
+    padding: 20px;
   }
 
   .search__wrap {
@@ -70,8 +105,16 @@
 }
 
 @media (min-width: $desktop-width) {
+  .main {
+    padding: 40px 200px;
+  }
+
   .articles__titile {
     font-size: 22px;
     line-height: 26px;
   }
+}
+
+.pagination {
+  @include pagination;
 }
