--- a/client/styles/mixins.scss
+++ b/client/styles/mixins.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 @mixin list-reset() {
   list-style: none;
   margin: 0;
@@ -33,5 +35,58 @@
   &:active {
     color: $color-active;
     box-shadow: none;
+  }
+}
+
+@mixin pagination() {
+  display: flex;
+  justify-content: center;
+  padding: 20px 10px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 40px;
+  }
+
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 22px;
+    line-height: 1.4;
+
+    li {
+      margin: 5px;
+    }
+
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      border: 1px solid #000000;
+      height: 32px;
+      transition: $delay;
+      padding: 0 8px;
+      color: #000;
+
+      &:hover {
+        background-color: $color;
+        color: #fff;
+        border-color: $color;
+      }
+
+      &:active {
+        background-color: $color-active;
+        border-color: $color-active;
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 60px;
+    max-width: $max-width;
+    margin: 0 auto;
   }
 }
