добавляет приватность к запросам и метатеги к страницам

--- a/client/components/Footer/footer.module.scss
+++ b/client/components/Footer/footer.module.scss
@@ -26,6 +26,11 @@
   padding-bottom: 20px;
 }
 
+.description_sub {
+  display: block;
+  margin-top: 5px;
+}
+
 .feedback_link,
 .help_link {
   text-decoration: none;
