--- a/client/components/SocialList/sociallist.module.scss
+++ b/client/components/SocialList/sociallist.module.scss
@@ -21,11 +21,12 @@
 
   path {
     transition: $delay;
+    fill: $color;
   }
 
   &:hover {
     path {
-      fill: $color;
+      fill: #000;
     }
   }
 
