--- a/client/components/Article/article.module.scss
+++ b/client/components/Article/article.module.scss
@@ -21,12 +21,21 @@
 }
 
 .title_link {
-  font-family: Myriad Pro;
+  font-family: 'Myriad Pro', 'Verdana', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 25px;
   text-decoration: none;
   color: #000;
+  transition: $delay;
+
+  &:hover {
+    color: $color;
+  }
+
+  &:active {
+    opacity: .5;
+  }
 }
 
 .link {
