--- a/client/styles/mixins.scss
+++ b/client/styles/mixins.scss
@@ -29,7 +29,8 @@
   transition: $delay;
 
   &:hover {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
   }
 
   &:active {
