--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -75,6 +75,7 @@ body {
   font-weight: 400;
   line-height: 1.2;
   color: #000000;
+  overflow-x: hidden;
 }
 
 img {
@@ -109,4 +110,8 @@ img {
 .pagination .active a:active {
   background-color: #bdf1a5;
   border-color: #bdf1a5;
+}
+
+.ql-container {
+  font-size: 14px;
 }
