--- a/client/components/Authors/authors.module.scss
+++ b/client/components/Authors/authors.module.scss
@@ -31,6 +31,7 @@
   font-size: 24px;
   line-height: 28px;
   text-align: center;
+  cursor: pointer;
 
   &:hover {
     background-color: $color;
@@ -57,6 +58,7 @@
   text-align: center;
   background-color: $color;
   color: #fff;
+  cursor: pointer;
 
   &:hover {
     background-color: $color;
@@ -80,6 +82,8 @@
 
   svg {
     margin: auto;
+    width: 12px;
+    height: 8px;
   }
 }
 
