--- a/client/components/Header/header.module.scss
+++ b/client/components/Header/header.module.scss
@@ -103,22 +103,9 @@
   z-index: 1;
 }
 
-.menu_list,
-.submenu_list {
+.menu_list {
   @include list-reset;
   @include flex-mobile;
-}
-
-.submenu_list__closed {
-  display: none;
-}
-
-.submenu_list {
-  padding: 10px 0;
-
-  .menu_link {
-    font-weight: 400;
-  }
 }
 
 .menu_item_arrow {
@@ -183,7 +170,7 @@
   }
 
   .menu_item {
-    margin-right: 2.7%;
+    margin-right: 4%;
     position: relative;
     padding: 33px 0;
   }
@@ -198,21 +185,6 @@
 
   .menu_item:hover path {
     fill: $color;
-  }
-
-  .submenu_list {
-    position: absolute;
-    top: 80px;
-    left: -35px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
-    background-color: #fff;
-    padding: 30px 35px;
-    width: max-content;
-    align-items: flex-start;
-
-    .menu_link {
-      padding: 8px 0;
-    }
   }
 
   .search {
