--- a/client/components/Tags/tags.module.scss
+++ b/client/components/Tags/tags.module.scss
@@ -27,13 +27,13 @@
   text-decoration: none;
   color: #000;
   display: block;
-  border: 1px solid #000;
+  border: 1px solid $color;
   padding: 8px 20px;
   transition: $delay;
 
   &:hover {
     color: $color;
-    border-color: $color;
+    border-color: #000;
   }
 
   &:active {
