--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 @font-face {
   font-display: swap;
   font-family: 'Verdana';
@@ -123,6 +125,17 @@ img {
 }
 
 .ck-content {
+  & a {
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px dotted #000;
+    transition: $delay;
+
+    &:hover {
+      border-bottom: 1px dotted $color-active;
+    }
+  }
+
   & .image-style-block-align-left,
   & .image-style-block-align-right {
     max-width: calc(100% - var(--ck-image-style-spacing));
@@ -185,5 +198,36 @@ img {
     &.image-style-align-right {
       margin-left: var(--ck-inline-image-style-spacing);
     }
+  }
+}
+
+.text {
+  font-size: 12pt;
+  line-height: 23px;
+
+  .raw-html-embed {
+    position: relative;
+    padding-bottom: 56.25%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
+    overflow: hidden;
+
+    @media (min-width: $tablet-width) {
+      max-width: 640px;
+      padding-bottom: 360px;
+      margin: auto;
+    }
+
+    iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+
+  figure {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
