добавляет возможность редактирования страниц из админки

--- a/client/components/AdminTable/admin-table.module.scss
+++ b/client/components/AdminTable/admin-table.module.scss
@@ -28,7 +28,11 @@
 .buttons div {
   padding: 5px;
   cursor: pointer;
+  transition: $delay;
 
+  &:active {
+    opacity: .5;
+  }
 }
 
 .delete {
