--- a/client/styles/mixins.scss
+++ b/client/styles/mixins.scss
@@ -23,8 +23,10 @@
   font-family: 'Myriad Pro', sans-serif;
   font-weight: 600;
   font-size: 13px;
-  line-height: 16px;
-  padding: 11px 30px 6px;
+  //line-height: 16px;
+  //padding: 11px 30px 6px;
+  line-height: 0;
+  padding: 16px 30px 17px;
   text-align: center;
   transition: $delay;
 
